--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,7 +87,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #2e3842;
+		background: #2F4F4F;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
